--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -1716,6 +1716,20 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 
+/** head_img **/
+
+.head_img{
+    position: relative;
+}
+
+.head_img .no_padding {
+   padding: 0;
+   margin: 0;
+}
+
+/** end head_img section **/
+
+
 /** about section **/
 
 .about {
@@ -1733,7 +1747,7 @@ input[type="radio"] .styled:checked+label::after {
 	width: 100%;
 	height: 50px;
 	content: "";
-	background: url(../images/about-bg.png);
+	background: url(/static/images/about-bg.png);
 	background-position-x: 0%;
 	background-position-y: 0%;
 	background-repeat: repeat;
