--- a/portfolio/templates/footer.html
+++ b/portfolio/templates/footer.html
@@ -3,28 +3,9 @@
 <footer>
     <div class="footer">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-2 col-md-6 col-sm-12 width">
+            <div class="row justify-content-center">
+                <div class="col-xs-13 col-md-13">
                     <div class="address">
-                        <h3>Address</h3>
-                        <i><img src="{% static 'icon/3.png' %}">Locations</i>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 col-sm-12 width">
-                    <div class="address">
-                        <h3>Menu</h3>
-                        <i><img src="{% static 'icon/2.png' %}">Menu</i>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 col-sm-12 width">
-                    <div class="address">
-                        <h3>Useful Links</h3>
-                        <i><img src="{% static 'icon/1.png' %}">Links</i>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 col-sm-12 width">
-                    <div class="address">
-                        <h3>Social Media </h3>
                         <ul class="contant_icon">
                             <li><img src="{% static 'icon/fb.png' %}" alt="icon"/></li>
                             <li><img src="{% static 'icon/tw.png' %}" alt="icon"/></li>
@@ -33,17 +14,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
-                    <div class="address">
-                        <h3>Newsletter </h3>
-                        <input class="form-control" placeholder="Enter your email" type="type" name="Enter your email">
-                        <button class="submit-btn">Subscribe</button>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a></p>
+            <p>&copy Copyright 2020 All Right Reserved By <a href="#">Sayantan Mandal</a></p>
         </div>
     </div>
 </footer>
