--- a/portfolio/templates/header.html
+++ b/portfolio/templates/header.html
@@ -17,9 +17,9 @@
                         <div class="limit-box">
                             <nav class="main-menu">
                                 <ul class="menu-area-main">
-                                    <li class="active"><a href=" ">Home</a></li>
-                                    <li><a href="#about">About</a></li>
-                                    <li><a href="#service">Skills</a></li>
+                                    <li class="active"><a href="{% url 'home' %}">Home</a></li>
+                                    <li><a href="{% url 'about' %}">About</a></li>
+                                    <li><a href="#service">Services</a></li>
                                     <li><a href="#download">Resume</a></li>
                                     <li><a href="#testimonial">Contact</a></li>
 <!--                                    <li class="mean-last"><a href="#"><img src="{% static 'images/search_icon.png' %}"-->
