--- a/portfolio/templates/homepage.html
+++ b/portfolio/templates/homepage.html
@@ -2,12 +2,14 @@
 
 {% load static %}
 
+
 {% block head_title %}
 <title>Home</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
 {% endblock %}
+
 
 {% block body_part_one %}
 <!-- slider -->
@@ -18,37 +20,31 @@
                 <img class="first-slide" src="{% static 'images/banner2.png' %}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption relative">
-                        <h1>Basic template 1</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                            here', making it look like readable English. Many desktop publishing packages and </p>
+                        <h1>This is ME !!!</h1>
+                        <p><b>I am Sayantan Mandal. Warm heartily welcomes you to my site and encourages you to drop
+                        me an email and lets know each other. Feel free to move here and there who knows one
+                            might get what it have been looking for.</b></p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="second-slide" src="{% static 'images/banner2.png' %}" alt="Second slide">
+                <img class="second-slide" src="{% static 'images/cs3.png' %}" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption relative">
-                        <h1>Basic template 2</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                            here', making it look like readable English. Many desktop publishing packages and </p>
+                        <h1>Yes, I am a Software Engineer</h1>
+                        <p><b>Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
+                            a few things, hehe.. </b></p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="third-slide" src="{% static 'images/banner2.png' %}" alt="Third slide">
+                <img class="second-slide" src="{% static 'images/slash1.jpg' %}" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption relative">
-                        <h1>Basic template 3</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                            here', making it look like readable English. Many desktop publishing packages and </p>
+                        <h1>And Yes, I am also a Guitarist</h1>
+                        <p><b>I don't really admit to this. But yes I am very passionate about Guitars</b></p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
@@ -65,23 +61,23 @@
 <!-- end slider  -->
 {% endblock %}
 
+
 {% block body_part_two %}
 <!-- about  -->
 <div id="about" class="about top_layer">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>About Informations</h2>
-                    <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and </span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="img-box">
                     <figure><img src="{% static 'images/about.png' %}" alt="img"/></figure>
                     <a href="#">read more</a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="titlepage">
+                    <h2>Hey, I'm Sayantan</h2>
+                    <h1>Let's be in touch !!!</h1>
+                    <span></span>
                 </div>
             </div>
         </div>
@@ -90,220 +86,18 @@
 <!-- end abouts -->
 {% endblock %}
 
+
 {% block body_part_three %}
-<!-- service -->
-<div id="service" class="service">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Services </h2>
-                    <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of <br>using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container margin-r-l">
-        <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/1.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/1.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/1.jpg' %}" class="fancybox" rel="ligthbox">Food</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/2.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/2.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/1.jpg' %}" class="fancybox" rel="ligthbox">Fashion</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/3.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/3.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/3.jpg' %}" class="fancybox" rel="ligthbox">Booking</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/4.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/4.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/4.jpg' %}" class="fancybox" rel="ligthbox">Marketing</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/5.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/5.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/5.jpg' %}" class="fancybox" rel="ligthbox">Design</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-                <div class="service-box">
-                    <figure>
-                        <a href="{% static 'images/6.jpg' %}" class="fancybox" rel="ligthbox">
-                            <img src="{% static 'images/6.jpg' %}" class="zoom img-fluid " alt="">
-                        </a>
-                        <span class="hoverle">
-                        <a href="{% static 'images/6.jpg' %}" class="fancybox" rel="ligthbox">Making Food</a>
-                        </span>
-                    </figure>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end service -->
+
 {% endblock %}
+
 
 {% block body_part_four %}
-<!-- Download -->
-<div id="download" class="download">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Download And Use For Free </h2>
-                    <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of <br>using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="main_slider" class="carousel slide banner-main" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active"><img class="first-slide"
-                                                               src="{% static 'images/banner.png' %}" alt="First slide">
-                        </div>
-                        <div class="carousel-item"><img class="second-slide" src="{% static 'images/banner.png' %}"
-                                                        alt="Second slide"></div>
-                        <div class="carousel-item"><img class="third-slide" src="{% static 'images/banner.png' %}"
-                                                        alt="Third slide"></div>
-                    </div>
-                    <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"> <i
-                            class='fa fa-angle-left'></i></a> <a class="carousel-control-next" href="#main_slider"
-                                                                 role="button" data-slide="next"> <i
-                        class='fa fa-angle-right'></i></a>
-                </div>
-                <div class="read-more">
-                    <a href="#">download now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end Download -->
+
 {% endblock %}
 
+
 {% block body_part_five %}
-<!-- Testimonial -->
-<div id="testimonial" class="testimonial">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h3>Testimonial</h3>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                <div id="testimonial_slider" class="carousel slide banner-bg" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="first-slide" src="{% static 'images/testimonial-img.png' %}">
-                            <div class="container">
-                                <div class="carousel-caption relat">
-                                    <h3>Luka due</h3>
-                                    <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page when looking at its layout. The point of using Lorem </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="second-slide" src="{% static 'images/testimonial-img.png' %}">
-                            <div class="container">
-                                <div class="carousel-caption relat">
-                                    <h3>Luka due</h3>
-                                    <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page when looking at its layout. The point of using Lorem </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="third-slide" src="{% static 'images/testimonial-img.png' %}">
-                            <div class="container">
-                                <div class="carousel-caption relat">
-                                    <h3>Luka due</h3>
-                                    <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page when looking at its layout. The point of using Lorem </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#testimonial_slider" role="button" data-slide="prev"> <i
-                            class='fa fa-angle-right'></i></a> <a class="carousel-control-next"
-                                                                  href="#testimonial_slider" role="button"
-                                                                  data-slide="next"> <i
-                        class='fa fa-angle-left'></i></a>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                <div class="contact">
-                    <h3>Contact Us</h3>
-                    <form>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <input class="contactus" placeholder="Name" type="text" name="Name">
-                            </div>
-                            <div class="col-sm-12">
-                                <input class="contactus" placeholder="Phone" type="text" name="Email">
-                            </div>
-                            <div class="col-sm-12">
-                                <input class="contactus" placeholder="Email" type="text" name="Email">
-                            </div>
-                            <div class="col-sm-12">
-                                <textarea class="textarea" placeholder="Message" name="Message"></textarea>
-                            </div>
-                            <div class="col-sm-12">
-                                <button class="send">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <!-- end Testimonial -->
 {% endblock %}
