Homepage approx ready, working on about page

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -46,10 +46,17 @@
             </div>
             <div class="col-md-6">
                 <div class="titlepage">
-                    <h2>Hey, I'm Sayantan</h2>
-                    <h1>Let's be in touch !!!</h1>
-                    <h1>Let's be in touch !!!</h1>
-                    <span></span>
+                    <h2>Greetings.</h2>
+                    <h1>My name is Sayantan Mandal</h1>
+                    <span>
+                        I' m a software developer, budding-guitarist and a dreamer. Who is trying to make a dent in this world - 
+                        copied ;), but lets be honest we all are trying to do this.  
+                    </span>
+                    <br><br>
+                    <span>
+                        I' m a software developer, budding-guitarist and a dreamer. Who is trying to make a dent in this world - 
+                        copied ;), but lets be honest we all are trying to do this.  
+                    </span>
                 </div>
             </div>
             <!--row 2-->
