--- a/portfolio/templates/homepage.html
+++ b/portfolio/templates/homepage.html
@@ -70,14 +70,21 @@
             <div class="col-md-6">
                 <div class="img-box">
                     <figure><img src="{% static 'images/about.png' %}" alt="img"/></figure>
-                    <a href="#">read more</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="titlepage">
                     <h2>Hey, I'm Sayantan</h2>
-                    <h1>Let's be in touch !!!</h1>
-                    <span></span>
+                    <span>
+                        We can work on a project or can also jam together, all per your liking. Just let me know. 
+                        Happy to hear from you...
+                    </span>
+                    <h1>Let's get in touch !!!</h1>
+                    
+                    <div class="img-box">
+                        <!-- TODO: this will direct to contact page, when its made -->
+                        <a href="{% url 'about' %}">read more</a>  
+                    </div>
                 </div>
             </div>
         </div>
