--- a/portfolio/templates/header.html
+++ b/portfolio/templates/header.html
@@ -8,7 +8,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                     <div class="full">
                         <div class="center-desk">
-                            <div class="logo"><a href=" ">SMandal</a></div>
+                            <div class="logo"><a href="{% url 'home' %}">SMandal</a></div>
                         </div>
                     </div>
                 </div>
