--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -36,11 +36,11 @@
                 <div class="img-box">
                     <ul>
                         <li>
-                            <figure><img src="{% static 'images/about.png' %}" alt="img"/></figure>
+                            <figure><img src="{% static 'images/think_different_image.jpg' %}" alt="img"/></figure>
                         </li>
-                        <li>
+                        <!-- <li>
                             <figure><img src="{% static 'images/about.png' %}" alt="img"/></figure>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -54,13 +54,13 @@
                     </span>
                     <br><br>
                     <span>
-                        I' m a software developer, budding-guitarist and a dreamer. Who is trying to make a dent in this world - 
-                        copied ;), but lets be honest we all are trying to do this.  
+                        Having a vision to do something different, something out of box, something that tickles and something that's 
+                        more that meet the eye.
                     </span>
                 </div>
             </div>
             <!--row 2-->
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="img-box">
                     <ul>
                         <li>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <!--row 3-->
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="img-box">
                     <ul>
                         <li>
@@ -97,15 +97,15 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-md-6">
+            </div> -->
+            <!-- <div class="col-md-6">
                 <div class="titlepage">
                     <h2>Hey, I'm Sayantan</h2>
                     <h1>Let's be in touch !!!</h1>
                     <h1>Let's be in touch !!!</h1>
                     <span></span>
                 </div>
-            </div>
+            </div> --> -->
 
         </div>
     </div>
