--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -1141,7 +1141,7 @@ nav.main-menu {
 	vertical-align: middle;
 }
 
-.main-menu ul>li:nth-child (6) {
+.main-menu ul>li:nth-child {
 	padding-right: 0px;
 }
 
@@ -1778,7 +1778,7 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .about .titlepage span {
-	color: # 3d3c3c;
+	color: #3d3c3c;
 	font-size: 17px;
 	line-height: 30px;
 }
@@ -1823,7 +1823,7 @@ input[type="radio"] .styled:checked+label::after {
 }
 
 .service .titlepage span {
-	color: # 3d3c3c
+	color: #3d3c3c
 }
 
 .service .service-box figure {
@@ -1965,7 +1965,7 @@ img.zoom {
 }
 
 .download .titlepage span {
-	color: # 3d3c3c
+	color: #3d3c3c
 }
 
 .download .titlepage h2 {
@@ -2040,25 +2040,80 @@ img.zoom {
 
 /** end download section **/
 
-.testimonial {
-	background: #0fc690;
-	padding: 60px 0px;
+.contact {
+	/* background: #0fc690; */
+	/* padding: 60px 0px; */
+
+	padding-top: 90px;
+	padding-bottom: 90px;
+	background: #fff;
 }
 
-.testimonial .titlepage {
+.contact .titlepage {
 	text-align: center;
 }
 
-.testimonial .titlepage h3 {
+.contact .titlepage h3 {
 	padding: 0px 0px 6px 0px;
-	font-size: 30px;
+	font-size: 20px;
 	font-weight: bold;
-	color: #fff;
+	color: #050303;
 	line-height: 46px;
-	border-bottom: #fff solid 1px;
-	width: 184px;
+	border-bottom: #050303 solid 1px;
+	/* width: 184px; */
 	margin: 0 auto;
 	margin-bottom: 60px;
+}
+
+.contact .titlepage span {
+	color: #3d3c3c;
+	font-size: 17px;
+	/* line-height: 30px; */
+}
+
+.contact h3 {
+	color: #000;
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.contact .contactus {
+	border: #b1b0b0 solid 1px;
+	padding: 12px 19px;
+	margin-bottom: 26px;
+	border-radius: inherit;
+	color: #000;
+	width: 100%;
+}
+
+.contact .textarea {
+	margin-bottom: 25px;
+	padding: 15px 19px;
+	color: #000 !important;
+	width: 100%;
+	border: #b1b0b0 solid 1px;
+	border-radius: inherit;
+}
+
+.contact .send {
+	font-size: 16px;
+	border: #000 solid 1px;
+	padding: 10px 50px;
+	background-color: #000;
+	color: #fff;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.contact .send:hover {
+	background-color: #0fc690;
+	border: #0fc690 solid 1px;
+	color: #fff;
 }
 
 .banner-bg {
@@ -2128,58 +2183,6 @@ img.zoom {
 	float: left;
 	left: 0px;
 	opacity: 1;
-}
-
-.testimonial .contact h3 {
-	color: #000;
-	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
-	padding-bottom: 20px;
-}
-
-.testimonial .contact {
-	background: #fff;
-	width: 100%;
-	height: 100%;
-	padding: 30px;
-}
-
-.testimonial .contact .contactus {
-	border: #b1b0b0 solid 1px;
-	padding: 12px 19px;
-	margin-bottom: 26px;
-	border-radius: inherit;
-	color: #000;
-	width: 100%;
-}
-
-.testimonial .contact .textarea {
-	margin-bottom: 25px;
-	padding: 15px 19px;
-	color: #000 !important;
-	width: 100%;
-	border: #b1b0b0 solid 1px;
-	border-radius: inherit;
-}
-
-.testimonial .contact .send {
-	font-size: 16px;
-	border: #000 solid 1px;
-	padding: 10px 50px;
-	background-color: #000;
-	color: #fff;
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
-	align-items: center;
-	flex-wrap: wrap;
-}
-
-.testimonial .contact .send:hover {
-	background-color: #0fc690;
-	border: #0fc690 solid 1px;
-	color: #fff;
 }
 
 .width {
