A basic structure with all pages ready and linked, its time to add content

--- a/portfolio/templates/homepage.html
+++ b/portfolio/templates/homepage.html
@@ -24,7 +24,7 @@
                         <p><b>I am Sayantan Mandal. Warm heartily welcomes you to my site and encourages you to drop
                         me an email and lets know each other. Feel free to move here and there who knows one
                             might get what it have been looking for.</b></p>
-                        <a href="#">Read More</a>
+                        <a href="{% url 'about' %}">Read More</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                         <h1>Yes, I am a Software Engineer</h1>
                         <p><b>Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
                             a few things, hehe.. </b></p>
-                        <a href="#">Read More</a>
+                        <a href="{% url 'my_works' %}">Read More</a>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                     <div class="carousel-caption relative">
                         <h1>And Yes, I am also a Guitarist</h1>
                         <p><b>I don't really admit to this. But yes I am very passionate about Guitars</b></p>
-                        <a href="#">Read More</a>
+                        <a href="{% url 'my_rhythm' %}">Read More</a>
                     </div>
                 </div>
             </div>
