--- a/portfolio/templates/header.html
+++ b/portfolio/templates/header.html
@@ -19,8 +19,8 @@
                                 <ul class="menu-area-main">
                                     <li><a href="{% url 'home' %}">Home</a></li>
                                     <li><a href="{% url 'about' %}">About</a></li>
-                                    <li><a href="#service">Services</a></li>
-                                    <li><a href="#download">Resume</a></li>
+                                    <li><a href="{% url 'my_works' %}">myWorks</a></li>
+                                    <li><a href="{% url 'my_rhythm' %}">myRhythm</a></li>
                                     <li><a href="{% url 'contact' %}">Contact</a></li>
                                     <!-- redundent but necessary to show list in mobile mode -->
                                     <li class="mean-last"></li> 
