[WIP-homepage]: adding content

--- a/portfolio/templates/homepage.html
+++ b/portfolio/templates/homepage.html
@@ -12,7 +12,7 @@
 
 
 {% block body_part_one %}
-<!-- slider -->
+<!-- carousel slider -->
 <section class="slider_section">
     <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
         <div class="carousel-inner">
@@ -21,8 +21,9 @@
                 <div class="container">
                     <div class="carousel-caption relative">
                         <h1>This is ME !!!</h1>
-                        <p><b>I am Sayantan Mandal. Warm heartily welcomes you to my site and encourages you to drop
-                        me an email and lets know each other. Feel free to move here and there who knows one
+                        <p><b>
+                            I am Sayantan Mandal. Warm heartily welcomes you to my site and encourages you to drop
+                            me an email and lets know each other. Feel free to move here and there who knows one
                             might get what it have been looking for.</b></p>
                         <a href="{% url 'about' %}">Read More</a>
                     </div>
@@ -33,8 +34,10 @@
                 <div class="container">
                     <div class="carousel-caption relative">
                         <h1>Yes, I am a Software Engineer</h1>
-                        <p><b>Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
-                            a few things, hehe.. </b></p>
+                        <p><b>
+                            Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
+                            a few things, hehe.. 
+                        </b></p>
                         <a href="{% url 'my_works' %}">Read More</a>
                     </div>
                 </div>
@@ -44,7 +47,9 @@
                 <div class="container">
                     <div class="carousel-caption relative">
                         <h1>And Yes, I am also a Guitarist</h1>
-                        <p><b>I don't really admit to this. But yes I am very passionate about Guitars</b></p>
+                        <p><b>
+                            I don't really admit to this. But yes I am very passionate about Guitars
+                        </b></p>
                         <a href="{% url 'my_rhythm' %}">Read More</a>
                     </div>
                 </div>
@@ -58,13 +63,47 @@
         </a>
     </div>
 </section>
-<!-- end slider  -->
+<!-- end carousel slider  -->
 {% endblock %}
 
 
 {% block body_part_two %}
-<!-- about  -->
+<!-- myWorks: start from here -->
 <div id="about" class="about top_layer">
+    <div class="container">
+       <div class="row">
+          <div class="col-md-12">
+             <div class="titlepage">
+                <h2><a href="{% url 'my_works' %}">Start From Here</a></h2>
+                <span>
+                    Been in the software industry now for quite a time as a Python developer. Made a way through this emerging 
+                    data industry. Currently a Data Engineer and aspiring to be a Data Scientist.
+                </span>
+             </div>
+          </div>
+       </div>
+       <div class="row">
+          <div class="col-md-12">
+                <div class="img-box">
+                    <figure><img src="{% static 'images/comp_graph.jpg' %}" alt="img"></figure>
+                    <a href="{% url 'my_works' %}">read more</a>
+                </div>
+          </div>
+       </div>
+    </div>
+ </div>
+<!-- end myWorks -->
+{% endblock %}
+
+
+{% block body_part_three %}
+
+{% endblock %}
+
+
+{% block body_part_four %}
+<!-- contact  -->
+<div id="about" class="about">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -76,11 +115,11 @@
                 <div class="titlepage">
                     <h2>Hey, I'm Sayantan</h2>
                     <span>
-                        We can work on a project or can also jam together, all per your liking. Just let me know. 
+                        We can work on a project or can also jam together, all per your liking. Just let me know. ;)  
                         Happy to hear from you...
                     </span>
+                    <br><br>
                     <h1>Let's get in touch !!!</h1>
-                    
                     <div class="img-box">
                         <!-- TODO: this will direct to contact page, when its made -->
                         <a href="{% url 'about' %}">read more</a>  
@@ -90,21 +129,12 @@
         </div>
     </div>
 </div>
-<!-- end abouts -->
-{% endblock %}
-
-
-{% block body_part_three %}
-
-{% endblock %}
-
-
-{% block body_part_four %}
-
+<!-- end contact -->
 {% endblock %}
 
 
 {% block body_part_five %}
+<!-- thank you token -->
 
-<!-- end Testimonial -->
+<!-- end thank you token -->
 {% endblock %}
