--- a/portfolio/templates/my_works.html
+++ b/portfolio/templates/my_works.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-13">
-                <img class="fluid-img" src="{% static 'images/banner2.png' %}" alt="img"/>
+                <img class="fluid-img" src="{% static 'images/coding_screen_banner.jpg' %}" alt="img"/>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
             <!--row 1-->
             <div class="col-md-6">
                 <div class="titlepage">
-                    <h3>myWorks</h3>>
+                    <h3>myWorks</h3>
                     <h3>Thanks for showing your interest in contacting me. Lets get in touch and see how far this can go...</h3>
                     <span>
                         You can reach me at <a href = "mailto: sayantanmandal047@gmail.com">sayantanmandal047@gmail.com </a>
