--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -40,9 +40,9 @@
 <body class="main-layout">
 
 <!-- loader  -->
-<div class="loader_bg">
+<!-- <div class="loader_bg">
     <div class="loader"><img src="{% static 'images/loading.gif' %}" alt="#"/></div>
-</div>
+</div> -->
 <!-- end loader -->
 
 
