--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-13">
-                <img class="fluid-img" src="{% static 'images/banner2.png' %}" alt="img"/>
+                <img class="fluid-img" src="{% static 'images/coding_screen_banner.jpg' %}" alt="img"/>
             </div>
         </div>
     </div>
