completed homepage, about, contact pages

--- a/portfolio/templates/homepage.html
+++ b/portfolio/templates/homepage.html
@@ -20,7 +20,7 @@
                 <img class="first-slide" src="{% static 'images/banner2.png' %}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption relative">
-                        <h1>This is ME !!!</h1>
+                        <h1>Greetings !!!</h1>
                         <p><b>
                             I am Sayantan Mandal. Warm heartily welcomes you to my site and encourages you to drop
                             me an email and lets know each other. Feel free to move here and there who knows one
@@ -33,7 +33,7 @@
                 <img class="second-slide" src="{% static 'images/cs3.png' %}" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption relative">
-                        <h1>Yes, I am a Software Engineer</h1>
+                        <h1>Yes, I am a Data Engineer</h1>
                         <p><b>
                             Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
                             a few things, hehe.. 
@@ -74,10 +74,13 @@
        <div class="row">
           <div class="col-md-12">
              <div class="titlepage">
-                <h2><a href="{% url 'my_works' %}">Start From Here</a></h2>
+                <h2><a href="{% url 'my_works' %}"></a>Hi there...</a></h2>
                 <span>
-                    Been in the software industry now for quite a time as a Python developer. Made a way through this emerging 
-                    data industry. Currently a Data Engineer and aspiring to be a Data Scientist.
+                    I am a Data Engineer who is aspiring to be a Data Scientist, one day. My top skills include 
+                    data fetching and data wrangling in big-data environment. Let me navigate you to myWorks, its 
+                    a short portfolio of what i have done and whats currently been cooking. 
+                    <br>
+                    See you at myWorks...
                 </span>
              </div>
           </div>
@@ -86,7 +89,7 @@
           <div class="col-md-12">
                 <div class="img-box">
                     <figure><img src="{% static 'images/comp_graph.jpg' %}" alt="img"></figure>
-                    <a href="{% url 'my_works' %}">read more</a>
+                    <a href="{% url 'my_works' %}">myWorks ></a>
                 </div>
           </div>
        </div>
@@ -113,13 +116,12 @@
             </div>
             <div class="col-md-6">
                 <div class="titlepage">
-                    <h2>Hey, I'm Sayantan</h2>
+                    <h2>About me</h2>
+                    <h1>Want to know me a little more</h1>
                     <span>
-                        We can work on a project or can also jam together, all per your liking. Just let me know. ;)  
-                        Happy to hear from you...
+                        Here's a brief introduction of myself, with a personal touch.
                     </span>
                     <br><br>
-                    <h1>Let's get in touch !!!</h1>
                     <div class="img-box">
                         <!-- TODO: this will direct to contact page, when its made -->
                         <a href="{% url 'about' %}">read more</a>  
