--- a/portfolio/templates/my_rhythm.html
+++ b/portfolio/templates/my_rhythm.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-13">
-                <img class="fluid-img" src="{% static 'images/coding_screen_banner.jpg' %}" alt="img"/>
+                <img class="fluid-img" src="{% static 'images/music-record.jpg' %}" alt="img"/>
             </div>
         </div>
     </div>
@@ -34,10 +34,9 @@
             <!--row 1-->
             <div class="col-md-6">
                 <div class="titlepage">
-                    <h3>myRhythm</h3>
-                    <h3>Thanks for showing your interest in contacting me. Lets get in touch and see how far this can go...</h3>
+                    <h3>The page is under construction</h3>
                     <span>
-                        You can reach me at <a href = "mailto: sayantanmandal047@gmail.com">sayantanmandal047@gmail.com </a>
+                        Sorry for the inconvenience caused
                     </span>
                     <br><br>
                     <!-- add something -->
@@ -45,7 +44,7 @@
                         
                     </span>
                     <br><br>
-                    <h1><b>Thanks again !!!</b></h1>
+                    <h1><b>Thanks :)</b></h1>
                 </div>
             </div>
             <div class="col-md-6">
@@ -53,7 +52,7 @@
                     <div class="img-box">
                         <ul>
                             <li>
-                                <figure><img src="{% static 'images/hello_image.jpg' %}" alt="img"/></figure>
+                                <figure><img src="{% static 'images/under-construction.png' %}" alt="img"/></figure>
                             </li>
                         </ul>
                     </div>
