--- a/portfolio/templates/my_works.html
+++ b/portfolio/templates/my_works.html
@@ -35,9 +35,9 @@
             <div class="col-md-6">
                 <div class="titlepage">
                     <h3>myWorks</h3>
-                    <h3>Thanks for showing your interest in contacting me. Lets get in touch and see how far this can go...</h3>
+                    <h3>My page is under construction</h3>
                     <span>
-                        You can reach me at <a href = "mailto: sayantanmandal047@gmail.com">sayantanmandal047@gmail.com </a>
+                        Sorry for the inconvenience caused
                     </span>
                     <br><br>
                     <!-- add something -->
@@ -45,7 +45,7 @@
                         
                     </span>
                     <br><br>
-                    <h1><b>Thanks again !!!</b></h1>
+                    <h1><b>Thanks</b></h1>
                 </div>
             </div>
             <div class="col-md-6">
@@ -53,7 +53,7 @@
                     <div class="img-box">
                         <ul>
                             <li>
-                                <figure><img src="{% static 'images/hello_image.jpg' %}" alt="img"/></figure>
+                                <figure><img src="{% static 'images/under-construction.png' %}" alt="img"/></figure>
                             </li>
                         </ul>
                     </div>
