--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <!-- favicon -->
-    <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif"/>
+    <link rel="icon" href="{% static 'icon/favicon-32x32.png' %}" type="image/gif"/>
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
     <!-- Tweaks for older IEs-->
