Added myworks app and everything is running fine

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
                                 <ul class="menu-area-main">
                                     <li><a href="{% url 'home' %}">Home</a></li>
                                     <li><a href="{% url 'about' %}">About</a></li>
-                                    <li><a href="{% url 'my_works' %}">myWorks</a></li>
+                                    <li><a href="{% url 'my_works:index' %}">myWorks</a></li>
                                     <li><a href="{% url 'my_rhythm' %}">myRhythm</a></li>
                                     <li><a href="{% url 'contact' %}">Contact</a></li>
                                     <!-- redundent but necessary to show list in mobile mode -->
