--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,7 +38,7 @@
                             Yes I like to work with software. In-fact this site is made by ME, whole from scratch except
                             a few things, hehe.. 
                         </b></p>
-                        <a href="{% url 'my_works' %}">Read More</a>
+                        <a href="{% url 'my_works:index' %}">Read More</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
        <div class="row">
           <div class="col-md-12">
              <div class="titlepage">
-                <h2><a href="{% url 'my_works' %}"></a>Hi there...</a></h2>
+                <h2><a href="{% url 'my_works:index' %}"></a>Hi there...</a></h2>
                 <span>
                     I am a Data Engineer who is aspiring to be a Data Scientist, one day. My top skills include 
                     data fetching and data wrangling in big-data environment. Let me navigate you to myWorks, its 
@@ -89,7 +89,7 @@
           <div class="col-md-12">
                 <div class="img-box">
                     <figure><img src="{% static 'images/comp_graph.jpg' %}" alt="img"></figure>
-                    <a href="{% url 'my_works' %}">myWorks ></a>
+                    <a href="{% url 'my_works:index' %}">myWorks ></a>
                 </div>
           </div>
        </div>
