--- a/my_works_blog/templates/my_works.html
+++ b/my_works_blog/templates/my_works.html
@@ -35,17 +35,15 @@
             <div class="col-md-6">
                 <div class="titlepage">
                     <h3>myWorks</h3>
-                    <h3>My page is under construction</h3>
+                    <h3>A professional intro</h3>
                     <span>
-                        Sorry for the inconvenience caused
+
                     </span>
                     <br><br>
                     <!-- add something -->
                     <span>
                         
                     </span>
-                    <br><br>
-                    <h1><b>Thanks</b></h1>
                 </div>
             </div>
             <div class="col-md-6">
@@ -53,7 +51,7 @@
                     <div class="img-box">
                         <ul>
                             <li>
-                                <figure><img src="{% static 'images/under-construction.png' %}" alt="img"/></figure>
+                                <figure><img src="{% static 'images/hello_image.jpg' %}" alt="img"/></figure>
                             </li>
                         </ul>
                     </div>
@@ -67,12 +65,58 @@
 
 
 {% block body_part_three %}
-
+<div id="download" class="download">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="titlepage">
+                     <h2>Download  And  Use  For  Free  </h2>
+                     <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of <br>using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</span>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-12">
+                  <div id="main_slider" class="carousel slide banner-main" data-ride="carousel">
+                     <div class="carousel-inner">
+                        <div class="carousel-item active"> <img class="first-slide" src="{% static 'images/1.jpg' %}" alt="First slide"> </div>
+                        <div class="carousel-item"> <img class="second-slide" src="{% static 'images/2.jpg' %}" alt="Second slide"> </div>
+                        <div class="carousel-item"> <img class="third-slide" src="{% static 'images/3.jpg' %}" alt="Third slide"> </div>
+                     </div>
+                     <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"> <i class="fa fa-angle-left"></i></a> <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next"> <i class="fa fa-angle-right"></i></a>
+                  </div>
+                  <div class="read-more">
+                     <a href="#">download now</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
 {% endblock %}
 
 
 {% block body_part_four %}
-
+<div id="my_works_index" class="contact">
+    <div class="container">
+        <div class="row">
+            {% for project in projects %}
+            <div class="col-md-4">
+                <div class="card mb-2">
+                    <img class="card-img-top" src="{% static project.image %}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ project.title }}</h5>
+                        <p class="card-text">{{ project.description }}</p>
+                        <a href="{% url 'my_works:detail' project.pk %}"
+                           class="btn btn-primary">
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
