--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2040,6 +2040,28 @@ img.zoom {
 
 /** end download section **/
 
+.testimonial {
+	background: #0fc690;
+	padding: 60px 0px;
+}
+
+.testimonial .titlepage {
+	text-align: center;
+}
+
+.testimonial .titlepage h3 {
+	padding: 0px 0px 6px 0px;
+	font-size: 30px;
+	font-weight: bold;
+	color: #fff;
+	line-height: 46px;
+	border-bottom: #fff solid 1px;
+	width: 184px;
+	margin: 0 auto;
+	margin-bottom: 60px;
+}
+
+
 .contact {
 	/* background: #0fc690; */
 	/* padding: 60px 0px; */
@@ -2183,6 +2205,58 @@ img.zoom {
 	float: left;
 	left: 0px;
 	opacity: 1;
+}
+
+.testimonial .contact h3 {
+	color: #000;
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.testimonial .contact {
+	background: #fff;
+	width: 100%;
+	height: 100%;
+	padding: 30px;
+}
+
+.testimonial .contact .contactus {
+	border: #b1b0b0 solid 1px;
+	padding: 12px 19px;
+	margin-bottom: 26px;
+	border-radius: inherit;
+	color: #000;
+	width: 100%;
+}
+
+.testimonial .contact .textarea {
+	margin-bottom: 25px;
+	padding: 15px 19px;
+	color: #000 !important;
+	width: 100%;
+	border: #b1b0b0 solid 1px;
+	border-radius: inherit;
+}
+
+.testimonial .contact .send {
+	font-size: 16px;
+	border: #000 solid 1px;
+	padding: 10px 50px;
+	background-color: #000;
+	color: #fff;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.testimonial .contact .send:hover {
+	background-color: #0fc690;
+	border: #0fc690 solid 1px;
+	color: #fff;
 }
 
 .width {
