--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
                                     <li><a href="{% url 'home' %}">Home</a></li>
                                     <li><a href="{% url 'about' %}">About</a></li>
                                     <li><a href="{% url 'my_works:index' %}">myWorks</a></li>
-                                    <li><a href="{% url 'my_rhythm' %}">myRhythm</a></li>
+                                    <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
                                     <li><a href="{% url 'contact' %}">Contact</a></li>
                                     <!-- redundent but necessary to show list in mobile mode -->
                                     <li class="mean-last"></li> 
