--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -50,7 +50,7 @@
                         <p><b>
                             I don't really admit to this. But yes I am very passionate about Guitars
                         </b></p>
-                        <a href="{% url 'my_rhythm' %}">Read More</a>
+                        <a href="{% url 'portfolio' %}">Read More</a>
                     </div>
                 </div>
             </div>
@@ -75,11 +75,11 @@
           <div class="col-md-12">
              <div class="titlepage">
                 <h2><a href="{% url 'my_works:index' %}"></a>Hi there...</a></h2>
-                <span>
-                    I am a Data Engineer who is aspiring to be a Data Scientist, one day. My top skills include 
+                 <span>
+                     I am Sayantan and I am a Data Engineer who is aspiring to be a Data Scientist, one day. My top skills include
                     data fetching and data wrangling in big-data environment. Let me navigate you to myWorks, its 
                     a short portfolio of what i have done and whats currently been cooking. 
-                    <br>
+                    <br><br>
                     See you at myWorks...
                 </span>
              </div>
@@ -106,7 +106,7 @@
 
 {% block body_part_four %}
 <!-- contact  -->
-<div id="about" class="about">
+<div id="contact" class="about">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
