--- a/templates/my_rhythm.html
+++ b/templates/my_rhythm.html
@@ -4,7 +4,7 @@
 
 
 {% block head_title %}
-<title>myRhythm</title>
+<title>Page Down</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
