--- a/templates/contact.html
+++ b/templates/contact.html
@@ -113,6 +113,7 @@
                      <a class="carousel-control-prev" href="#testimonial_slider" role="button" data-slide="prev"> <i class="fa fa-angle-right"></i></a> <a class="carousel-control-next" href="#testimonial_slider" role="button" data-slide="next"> <i class="fa fa-angle-left"></i></a>
                   </div>
                </div>
+                <!--email me-->
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                   <div class="contact">
                      <h3>Contact Us</h3>
