--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -17,7 +17,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-13">
-                <img class="fluid-img" src="{% static 'images/coding_screen_banner.jpg' %}" alt="img"/>
+<!--                todo change image-->
+                <img class="fluid-img" src="{% static 'images/cs1.jpg' %}" alt="img"/>
             </div>
         </div>
     </div>
@@ -34,7 +35,7 @@
             <!--row 1-->
             <div class="col-md-6">
                 <div class="titlepage">
-                    <h3>My Works/Portfolio</h3>
+                    <h3>My Portfolio</h3>
                     <span>
                         Experienced Software Engineer with specializing in Python Development for data-engineering, data-analysis and server application in the large-scale enterprises. Worked on technologies like pySpark, scikit-learn, Django.
                     </span>
@@ -70,9 +71,10 @@
             <div class="col-md-12">
                 <div class="titlepage">
                     <h2>My Skills</h2>
-                    <span>
-
-                     </span>
+                        <ul>
+                            <li><h4>10% fill - beginner</h4></li>
+                            <li><h4>100% fill - expert</h4></li>
+                        </ul>
                 </div>
             </div>
         </div>
@@ -83,98 +85,93 @@
                         <div class="carousel-item active">
                             <h3>Languages</h3>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                    20 %
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuemin="0" aria-valuemax="100">
+                                    Python
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                    25 %
+                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 50%" aria-valuemin="0" aria-valuemax="100">
+                                    C#
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                    50 %
+                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100">
+                                    C
                                 </div>
                             </div>
                             <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                    75 %
-                                </div>
-                            </div>
-                            <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                                    100 %
-                                </div>
-                            </div>
+
+<!--                            <div class="progress" style="width: 40%">-->
+<!--                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">-->
+<!--                                    100 %-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                         <div class="carousel-item">
-                            <h3>Software engineering</h3>
+                            <h3>Software Eng.</h3>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                                    10 %
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuemin="0" aria-valuemax="100">
+                                    Back-End
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                    25 %
+                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuemin="0" aria-valuemax="100">
+                                    Database
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                    50 %
+                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuemin="0" aria-valuemax="100">
+                                    Data-Structures
                                 </div>
                             </div>
                             <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                    75 %
-                                </div>
-                            </div>
-                            <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                                    100 %
-                                </div>
-                            </div>
+<!--                            <div class="progress" style="width: 40%">-->
+<!--                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">-->
+<!--                                    75 %-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <br>-->
+<!--                            <div class="progress" style="width: 40%">-->
+<!--                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">-->
+<!--                                    100 %-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                         <div class="carousel-item">
-                            <h3>Data Engineering</h3>
+                            <h3>Data Eng.</h3>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                                    10 %
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemax="100">
+                                    Data Wrangling
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                    25 %
+                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemax="100">
+                                    Data Pipeline
                                 </div>
                             </div>
                             <br>
                             <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                    50 %
+                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemax="100">
+                                    Data Visualization
                                 </div>
                             </div>
                             <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                    75 %
-                                </div>
-                            </div>
-                            <br>
-                            <div class="progress" style="width: 40%">
-                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                                    100 %
-                                </div>
-                            </div>
+<!--                            <div class="progress" style="width: 40%">-->
+<!--                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">-->
+<!--                                    75 %-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <br>-->
+<!--                            <div class="progress" style="width: 40%">-->
+<!--                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">-->
+<!--                                    100 %-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"> <i
@@ -186,7 +183,7 @@
                 <br>
                 <br>
                 <div class="read-more">
-                    <a href="#">download resume</a>
+                    <a href="https://drive.google.com/file/d/1ya7G1hkroaav4mx-3KwAMxZIaxu9l4wl/view?usp=sharing">download resume</a>
                 </div>
             </div>
         </div>
